# wellsfargo-fullstack-code-test

./: README.md
api/: .gitignore  app.py  models.py  pyproject.toml
api/utility/: builders.py  database.py  settings.py
web-app/: package-lock.json
