[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["bhavanichandra <bhavanichandra9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<=3.11.1"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
scipy = "^1.10.1"
pymongo = "^4.3.3"
python-multipart = "^0.0.6"
asyncio = "^3.4.3"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
